# FetchAI-Hackathon

./: .gitignore  3D_Builder.ipynb  README.md  agent2.py  app.py  backend-requirements.txt  deltav.py  dev.ipynb  main.py  private_keys.json  pyproject.toml  questionnaire_agent.py  reder_3d.py  test.py
samples/: centipede.stl  smartphone.ply  smartphone.stl  smartphone.wrl  test_vrml.wrl
utils/: utils.py
