[tool.poetry]
name = "3d model builder"
version = "0.1.0"
description = ""
authors = ["Eyuvaraj <21f2000664@ds.study.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uagents = "^0.11.1"
pinecone-client = "^4.1.0"
openai = "^1.30.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
